upgraded debug adapter reference. added test suite project

--- a/FileSerializers/FileSerializers.csproj
+++ b/FileSerializers/FileSerializers.csproj
@@ -32,13 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IDebug, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\TheDebugAdapter\Builds\IDebug.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TheDebugAdapter, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\TextSerializers\bin\Debug\TheDebugAdapter.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
