--- a/Projects/BRM.FileSerializers.Interfaces/BRM.FileSerializers.Interfaces.csproj
+++ b/Projects/BRM.FileSerializers.Interfaces/BRM.FileSerializers.Interfaces.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{CEAE32F5-1BAB-4764-9A0A-3EAF0503FF8A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISerializeFiles</RootNamespace>
+    <RootNamespace>BRM.FileSerializers.Interfaces</RootNamespace>
     <AssemblyName>BRM.FileSerializers.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -43,6 +43,15 @@
     <Compile Include="Scripts\IWriteFiles.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+  <ItemGroup>
+    <_dll Include="$(TargetDir)\$(ProjectName).dll" />
+    <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
+  </ItemGroup>
+  <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
+    <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
+    <Copy SourceFiles="@(_pdb)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
