--- a/Projects/BRM.TextSerializers.Interfaces/BRM.TextSerializers.Interfaces.csproj
+++ b/Projects/BRM.TextSerializers.Interfaces/BRM.TextSerializers.Interfaces.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{F7FF6571-60B8-4CFB-8573-0F00E4F18312}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISerializeText</RootNamespace>
+    <RootNamespace>BRM.TextSerializers.Interfaces</RootNamespace>
     <AssemblyName>BRM.TextSerializers.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -42,6 +42,15 @@
     <Compile Include="Scripts\ISerializeText.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+  <ItemGroup>
+    <_dll Include="$(TargetDir)\$(ProjectName).dll" />
+    <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
+  </ItemGroup>
+  <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
+    <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
+    <Copy SourceFiles="@(_pdb)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
