--- a/Projects/BRM.TextSerializers.Unity/BRM.TextSerializers.Unity.csproj
+++ b/Projects/BRM.TextSerializers.Unity/BRM.TextSerializers.Unity.csproj
@@ -9,7 +9,7 @@
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>BRM.TextSerializers.Unity</RootNamespace>
         <AssemblyName>BRM.TextSerializers.Unity</AssemblyName>
-        <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -51,6 +51,15 @@
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+    <ItemGroup>
+        <_dll Include="$(TargetDir)\$(ProjectName).dll" />
+        <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
+    </ItemGroup>
+    <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
+        <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
+        <Copy SourceFiles="@(_pdb)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
+    </Target>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
