reset target frameworks for projects, as 4.7.2 throws Type Load errors in unity. added .dll/.pdb deletion on pre-build for a clean slate

--- a/Projects/BRM.FileSerializers.Interfaces/BRM.FileSerializers.Interfaces.csproj
+++ b/Projects/BRM.FileSerializers.Interfaces/BRM.FileSerializers.Interfaces.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BRM.FileSerializers.Interfaces</RootNamespace>
     <AssemblyName>BRM.FileSerializers.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -48,6 +48,10 @@
     <_dll Include="$(TargetDir)\$(ProjectName).dll" />
     <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
   </ItemGroup>
+  <Target Name="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
+    <Delete Files="@(_dll)"/>
+    <Delete Files="@(_pdb)"/>
+  </Target>
   <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
     <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
     <Copy SourceFiles="@(_pdb)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
