--- a/Projects/BRM.TextSerializers.Newtonsoft/BRM.TextSerializers.Newtonsoft.csproj
+++ b/Projects/BRM.TextSerializers.Newtonsoft/BRM.TextSerializers.Newtonsoft.csproj
@@ -9,7 +9,7 @@
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>BRM.TextSerializers.Newtonsoft</RootNamespace>
         <AssemblyName>BRM.TextSerializers.Newtonsoft</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -32,8 +32,8 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+        <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+          <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="System" />
@@ -51,15 +51,20 @@
         <Name>BRM.TextSerializers.Interfaces</Name>
       </ProjectReference>
     </ItemGroup>
-    <ItemGroup>
-      <None Include="packages.config" />
-    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 
     <ItemGroup>
         <_dll Include="$(TargetDir)\$(ProjectName).dll" />
         <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
     </ItemGroup>
+
+    <ItemGroup>
+      <None Include="packages.config" />
+    </ItemGroup>
+    <Target Name="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
+        <Delete Files="@(_dll)" />
+        <Delete Files="@(_pdb)" />
+    </Target>
     <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
         <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
         <Copy SourceFiles="@(_pdb)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
