--- a/Projects/BRM.TextSerializers/BRM.TextSerializers.csproj
+++ b/Projects/BRM.TextSerializers/BRM.TextSerializers.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BRM.TextSerializers</RootNamespace>
     <AssemblyName>BRM.TextSerializers</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -56,6 +56,10 @@
     <_dll Include="$(TargetDir)\$(ProjectName).dll" />
     <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
   </ItemGroup>
+  <Target Name="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
+    <Delete Files="@(_dll)"/>
+    <Delete Files="@(_pdb)"/>
+  </Target>
   <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
     <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
     <Copy SourceFiles="@(_pdb)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
