--- a/Projects/BRM.TextSerializers.Newtonsoft/BRM.TextSerializers.Newtonsoft.csproj
+++ b/Projects/BRM.TextSerializers.Newtonsoft/BRM.TextSerializers.Newtonsoft.csproj
@@ -45,11 +45,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\NewtonsoftJsonSerializer.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <_dll Include="$(TargetDir)\$(ProjectName).dll" />
-    <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
-  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
@@ -59,19 +54,14 @@
       <Name>BRM.DataSerializers.Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
-  <Target Name="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
-    <Delete Files="@(_dll)" />
-    <Delete Files="@(_pdb)" />
-  </Target>
-  <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
-    <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
-    <Copy SourceFiles="@(_pdb)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
+
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To properly import the build steps project...
+        1. Clone repo from https://github.com/brandonsbricks/build-steps
+        2. In Rider, navigate to File > Settings > Build, Execution, and Deployment > Toolset and Build > MSBuild Global Properties
+            a. Add variable "BUILD_STEPS" with the filePath for the .targets file (eg: "C:\Repos\BuildSteps\BRM.BuildSteps\BRM.BuildSteps.targets")
+        3. Review the comments in this BuildSteps.targets file for proper configuration
+  -->
+  <Import Project="$(BUILD_STEPS)" Condition=" '$(Configuration)' == 'Release' "/>
+
 </Project>
